frame/support/test/tests/pallet_ui/storage_invalid_attribute.stderr
error: expected `getter` or `storage_name`
  --> $DIR/storage_invalid_attribute.rs:19:15
   |
19 |     #[pallet::generate_store(pub trait Store)]
   |               ^^^^^^^^^^^^^^
